k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: payment-api.wolkehost.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: payment-api-service
                port:
                  number: 80
          - path: /webhooks
            pathType: Prefix
            backend:
              service:
                name: payment-api-service
                port:
                  number: 11000
